add icons students

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,7 @@
         <ion-list-header>
             Cuatrimestre Septiembre Diciembre
         </ion-list-header>
-        <ion-card routerLink="/subject" class="welcome-card" [style.background]="'url(' + subject.cover_page + ')'"
+        <ion-card routerLink="/subject" class="welcome-card card-hg" [style.background]="'url(' + subject.cover_page + ')'"
             [style.background-size]="'cover'" [style.text-align]="'left'" [style.background-repeat]="'no-repeat'"
             *ngFor="let subject of subjects">
             <ion-card-header>
