--- a/src/app/subject/subject.page.html
+++ b/src/app/subject/subject.page.html
@@ -25,7 +25,7 @@
 
         <ion-item *ngFor="let time of schedule">
             <ion-avatar slot="start">
-                <img src="https://image.flaticon.com/icons/svg/59/59252.svg">
+                <img src="https://image.flaticon.com/icons/svg/265/265690.svg">
             </ion-avatar>
             <ion-label>
                 <h3>{{time.day}}</h3>
